qcacld-3.0: add -Wno-error=array-parameter
Change-Id: I1909604724590ef197fecadedaf7b887e76d4631

--- a/drivers/staging/qcacld-3.0/Kbuild
+++ b/drivers/staging/qcacld-3.0/Kbuild
@@ -3325,6 +3325,9 @@ cppflags-$(CONFIG_DUMP_REO_QUEUE_INFO_IN_DDR) += -DDUMP_REO_QUEUE_INFO_IN_DDR
 KBUILD_CPPFLAGS += $(cppflags-y)
 
 ccflags-y += -Wmissing-prototypes
+ifeq ($(cc-name), gcc)
+ccflags-y += -Wno-error=array-parameter
+endif
 
 ifeq ($(call cc-option-yn, -Wheader-guard), y)
 ccflags-y += -Wheader-guard
